@@ -63,11 +63,9 @@
                 file system checking.
                 <filename>systemd-fsck-root.service</filename> is
                 responsible for file system checks on the root file
-                system, but in only if the root filesystem wasn't
-                checked in the initramfs.
+                system.
                 <filename>systemd-fsck@.service</filename> is used for
-                all other file systems and for the root file system in
-                the initramfs.</para>
+                all other file systems.</para>
 
                 <para>Those services are started at boot if
                 <option>passno</option> in
