@@ -2,6 +2,8 @@ systemd System and Service Manager
 
    systemd (214.10-dev)
 ~~~~~~~
+ * core:
+ 	- remove initramfs support;
 
    systemd (214.9)
 ~~~~~~~
